# claude-code-subagent

./: .gitignore  CLAUDE.md  GLOBAL_SUBAGENTS_SETUP.md  README.md
.claude/agents/: api-architect.md  api-developer.md  backend-architect.md  backend-developer.md  code-debugger.md  code-documenter.md  code-refactor.md  code-reviewer.md  code-security-auditor.md  code-standards-enforcer.md  database-architect.md  database-designer.md  frontend-architect.md  frontend-developer.md  ios-developer.md  javascript-developer.md  mobile-developer.md  php-developer.md  production-validator.md  pyside6-frontend-expert.md  python-developer.md  python-specialist.md  tech-research-assistant.md  technical-documentation-writer.md  typescript-developer.md  wordpress-developer.md
agent draft/: python-developer
components/: UserProfileCard.tsx
people-management-system/: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  UI_FIXES_COMPLETE_REPORT.md  USER_GUIDE.md  activate.sh  add_form_logging.py  alembic.ini  check_db_columns.py  debug_client_form.py  debug_person_creation.py  fix_corrupted_api_keys.py  fix_database_migration.py  generate_api_key.py  manage_db.py  people_management.db-shm  people_management.db-wal  pyproject.toml  pytest.ini  run_tests.py  show_api_keys.py  simple_db_test.py  test_all_fixes.py  test_all_person_fields.py  test_api_connection.py  test_api_key.py  test_api_key_fixes.py  test_api_key_validation.py  test_client_fixed.py  test_client_fixes.py  test_complete_person_save.py  test_complete_system.sh  test_comprehensive_data_loss_fix.py  test_comprehensive_person_creation.py  test_connection.py  test_dashboard_fix.py  test_display_fix.py  test_email_validation.py  (+13 more)
people-management-system/client/: README.md  __init__.py  main.py  pyproject.toml
people-management-system/client/models/: __init__.py
people-management-system/client/resources/: styles.qss  themes.py
people-management-system/client/services/: __init__.py  api_service.py  config_service.py
people-management-system/client/ui/: __init__.py  login_dialog.py  main_window.py
people-management-system/client/ui/dialogs/: settings_dialog.py
people-management-system/client/ui/views/: dashboard_view.py  departments_view.py  employment_view.py  people_view.py  positions_view.py
people-management-system/client/ui/widgets/: data_table.py  error_dialog.py  loading_widget.py  person_form.py  search_widget.py
people-management-system/client/utils/: __init__.py  async_utils.py  icon_manager.py
people-management-system/docs/: API.md  API_ENHANCEMENTS.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  DOCUMENTATION_UPDATE_2025_01.md  PYSIDE6_IMPORT_FIX.md  REFACTORING_GUIDE.md  TROUBLESHOOTING.md  UI_FIXES_2025_01.md
people-management-system/docs/archive/: ALL_FIXES_SUMMARY.md  ASYNC_FIXES_SUMMARY.md  DATE_FORMAT_AND_DATA_FIX_SUMMARY.md  DOCUMENTATION_UPDATE_SUMMARY.md  FIELD_SAVING_FIXES_SUMMARY.md  FINAL_DATA_INTEGRITY_REPORT.md  FIX_INSTRUCTIONS.md  FIX_SUMMARY.md  PERSON_FIELDS_FIX_SUMMARY.md  SOLUTION_SUMMARY.md  quick_start_guide.md
people-management-system/server/: README.md  __init__.py  main.py  pyproject.toml  run.py
people-management-system/server/api/: __init__.py  auth.py  dependencies.py  middleware.py  openapi.py  responses.py  testing.py
people-management-system/server/api/middleware_components/: __init__.py  security_middleware.py
people-management-system/server/api/routes/: __init__.py  admin.py  departments.py  employment.py  people.py  positions.py  statistics.py
people-management-system/server/api/schemas/: __init__.py  common.py  department.py  employment.py  person.py  position.py
people-management-system/server/api/services/: __init__.py  person_service.py
people-management-system/server/api/utils/: __init__.py  cache.py  cache_invalidation.py  formatters.py  security.py  validators.py
people-management-system/server/api/v1/: __init__.py
people-management-system/server/config/: __init__.py  cache.py  database.py  environments.py  security.py
people-management-system/server/core/: __init__.py  config.py  exceptions.py
people-management-system/server/database/: README.md  __init__.py  config.py  db.py  init_db.py  models.py  seeders.py
people-management-system/server/database/migrations/: env.py
people-management-system/server/database/migrations/versions/: d98a095181f8_add_additional_person_fields_and_.py
people-management-system/server/models/: __init__.py
people-management-system/shared/: __init__.py  api_client.py  pyproject.toml
people-management-system/shared/models/: __init__.py  person.py  response.py
people-management-system/tests/: README.md  __init__.py  conftest.py  test_api_people.py  test_models.py  test_security.py
