[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv.workspace]
members = ["server", "client", "shared"]

[tool.uv.sources]
people-management-shared = { workspace = true }
people-management-server = { workspace = true }
people-management-client = { workspace = true }

[project]
name = "people-management-system"
version = "0.1.0"
description = "A client-server people management system"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "people-management-client",
    "people-management-server",
    "people-management-shared",
]

[project.urls]
Homepage = "https://github.com/yourusername/people-management-system"
Repository = "https://github.com/yourusername/people-management-system"

[tool.setuptools]
packages = []  # Root project has no packages, only workspace members

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
