[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "people-management-server"
version = "0.1.0"
description = "FastAPI server for the people management system"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
requires-python = ">=3.9"
license = "MIT"

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",  # PostgreSQL adapter
    "python-multipart>=0.0.6",  # For form data handling
    "python-jose[cryptography]>=3.3.0",  # For JWT tokens
    "passlib[bcrypt]>=1.7.4",  # For password hashing
    "python-dotenv>=1.0.0",  # For environment variables
    "email-validator>=2.0.0",  # For email validation in Pydantic
    "httpx>=0.25.0",  # For API client SDK and testing
    "starlette>=0.27.0",  # Core ASGI framework (FastAPI dependency)
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",  # For testing FastAPI
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.0.0",
]

test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
people-server = "server.main:main"
people-db = "server.database.init_db:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=server",
    "--cov-report=html",
    "--cov-report=term-missing",
]

[tool.coverage.run]
source = ["server"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]