[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "people-management-shared"
version = "0.1.0"
description = "Shared data models and utilities for the people management system"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
requires-python = ">=3.9"
license = "MIT"

dependencies = [
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "typing-extensions>=4.8.0",  # For enhanced type hints
    "email-validator>=2.1.0",  # For email validation in Pydantic
    "python-dateutil>=2.8.0",  # For date parsing and manipulation
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.0.0",
]

test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=shared",
    "--cov-report=html",
    "--cov-report=term-missing",
]

[tool.coverage.run]
source = ["shared"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]